--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <title>Rapid JS</title>
 </head>
 <body>
-
-
-<script src="main.js"></script>
+<script type="text/javascript"src="main.js"></script>
 </body>
 </html>
